force-app/main/default/objects/AI_obj_RoleAndContent__c/AI_obj_RoleAndContent__c.object-meta.xml
<CustomObject>
    <label>AI Role And Content</label>
    <nameField>
        <label>AI RoleAndContent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Roles And Contents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>