force-app/main/default/objects/AI_obj_RoleAndContent__c/fields/content__c.field-meta.xml
<CustomField>
    <fullName>content__c</fullName>
    <label>content</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>