force-app/main/default/objects/AI_obj_RoleAndContent__c/fields/conversation__c.field-meta.xml
<CustomField>
    <fullName>conversation__c</fullName>
    <label>AI Conversation</label>
    <referenceTo>AI_obj_Conversation__c</referenceTo>
    <relationshipLabel>AI Roles And Contents</relationshipLabel>
    <relationshipName>AI_Roles_And_Contents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>