force-app/main/default/objects/AI_obj_RoleAndContent__c/fields/ConversationIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ConversationIdentifier__c</fullName>
    <formula>conversation__r.ConversationId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversation</label>
    <type>Text</type>
</CustomField>