force-app/main/default/objects/AI_obj_RoleAndContent__c/fields/role__c.field-meta.xml
<CustomField>
    <fullName>role__c</fullName>
    <label>role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>system</fullName>
            </value>
            <value>
                <fullName>assistant</fullName>
            </value>
            <value>
                <fullName>user</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>