force-app/main/default/objects/AI_obj_RoleAndContent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ConversationIdentifier__c</columns>
    <columns>NAME</columns>
    <columns>role__c</columns>
    <columns>content__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>