force-app/main/default/objects/AI_obj_RoleAndContent__c/listViews/First.listView-meta.xml
<ListView>
    <fullName>First</fullName>
    <columns>ConversationIdentifier__c</columns>
    <columns>NAME</columns>
    <columns>role__c</columns>
    <columns>content__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ConversationIdentifier__c</field>
        <operation>equals</operation>
        <value>First</value>
    </filters>
    <label>First</label>
</ListView>